--- a/src/Views/fSanPham_BaoCao.form
+++ b/src/Views/fSanPham_BaoCao.form
@@ -145,6 +145,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="In"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonInLoaiActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JSeparator" name="jSeparator1">
         </Component>
